unpackaged/main/default/objects/pse__Resource_Request__c/fields/Account_Delivery_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Delivery_Team__c</fullName>
    <formula>IF( NOT(ISBLANK(pse__Opportunity__c)), TEXT(pse__Opportunity__r.Account.Delivery_Team__c),
IF( NOT(ISBLANK(pse__Project__c)), TEXT(pse__Project__r.pse__Account__r.Delivery_Team__c) , ""))</formula>
    <label>Account Delivery Team</label>
    <type>Text</type>
</CustomField>