unpackaged/main/default/objects/pse__Resource_Request__c/fields/Count_PTA__c.field-meta.xml
<CustomField>
    <fullName>Count_PTA__c</fullName>
    <label>Count PTA</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>