unpackaged/main/default/objects/pse__Resource_Request__c/fields/MyProjectRRs__c.field-meta.xml
<CustomField>
    <fullName>MyProjectRRs__c</fullName>
    <formula>pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyProjectRRs</label>
    <type>Checkbox</type>
</CustomField>