unpackaged/main/default/objects/pse__Resource_Request__c/fields/Onsite_or_Remote__c.field-meta.xml
<CustomField>
    <fullName>Onsite_or_Remote__c</fullName>
    <label>Onsite or Remote?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>