unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Account__c.field-meta.xml
<CustomField>
    <fullName>pse__Account__c</fullName>
    <description>The Name of the Account associated with the related Opportunity, if one exists; otherwise, the Name of the Account associated with the related Project, if one exists.</description>
    <formula>IF(AND(NOT(ISNULL(pse__Opportunity__c)),NOT(pse__Opportunity__c=''),NOT(ISNULL(pse__Opportunity__r.AccountId)),NOT(pse__Opportunity__r.AccountId=''),NOT(ISNULL(pse__Opportunity__r.Account.Name)),NOT(ISBLANK(pse__Opportunity__r.Account.Name))),pse__Opportunity__r.Account.Name,
				 IF(AND(NOT(ISNULL(pse__Project__c)),NOT(pse__Project__c=''),NOT(ISNULL(pse__Project__r.pse__Account__c)),NOT(pse__Project__r.pse__Account__c=''),NOT(ISNULL(pse__Project__r.pse__Account__r.Name)),NOT(ISBLANK(pse__Project__r.pse__Account__r.Name))),pse__Project__r.pse__Account__r.Name,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Name of the Account associated with the related Opportunity, if one exists; otherwise, the Name of the Account associated with the related Project, if one exists.</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>