unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Request_Priority__c.field-meta.xml
<CustomField>
    <fullName>pse__Request_Priority__c</fullName>
    <label>Request Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>