unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Resource_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request_Name__c</fullName>
    <label>Resource Request Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>