unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__SOW_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__SOW_Hours__c</fullName>
    <inlineHelpText>Requested hours for this resource request.</inlineHelpText>
    <label>Requested Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>