unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Staffer_Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Staffer_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This resource will be picked by Staffer for this resource request.</description>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.pse__Is_Resource__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.pse__Is_Resource_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Requests (Staffer Resource)</relationshipLabel>
    <relationshipName>Resource_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>