unpackaged/main/default/objects/pse__Resource_Request__c/fields/Request_Link__c.field-meta.xml
<CustomField>
    <fullName>Request_Link__c</fullName>
    <formula>HYPERLINK("/" &amp; Id,  Name, '_self')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Link</label>
    <type>Text</type>
</CustomField>