unpackaged/main/default/objects/pse__Resource_Request__c/fields/Role_Budget_Required__c.field-meta.xml
<CustomField>
    <fullName>Role_Budget_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated from a FLOW.</description>
    <inlineHelpText>This resource requets requires a role budget.</inlineHelpText>
    <label>Role Budget Required?</label>
    <type>Checkbox</type>
</CustomField>