unpackaged/main/default/objects/pse__Resource_Request__c/validationRules/Insufficient_Role_Budget_Hours_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Insufficient_Role_Budget_Hours_Request</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( 
      pse__SOW_Hours__c &gt; Role_Budget__r.Available_Hours_to_Request__c
     )</errorConditionFormula>
    <errorMessage>There are not enough hours on the role budget for this resource request. Please review your role budgets.</errorMessage>
</ValidationRule>