unpackaged/main/default/objects/pse__Resource_Request__c/validationRules/Lock_fields_that_can_be_changed_on_RR.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_fields_that_can_be_changed_on_RR</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISCHANGED( pse__Resource_Role__c  ),
  			ISCHANGED(  pse__Resource_Role__c ),
			  ISCHANGED(  pse__SOW_Hours__c  ),
			  ISCHANGED(  pse__Start_Date__c  ),
			  ISCHANGED(  pse__End_Date__c  ),
			  ISCHANGED(  FFX_Resource_Request_Type__c  ),
			  ISCHANGED(  pse__Opportunity__c ),
			  ISCHANGED(  pse__Project__c )  
											)</errorConditionFormula>
    <errorMessage>Only Region, Practice, Group, Resource and Status can be changed on already existing Resource Requests.</errorMessage>
</ValidationRule>