unpackaged/main/default/objects/pse__Resource_Request__c/validationRules/Region_or_Group_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Region_or_Group_must_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(pse__Region__c ),
	
	 ISBLANK(pse__Group__c )
					)</errorConditionFormula>
    <errorMessage>A Region or Group must be selected.</errorMessage>
</ValidationRule>