unpackaged/main/default/objects/pse__Resource_Request__c/listViews/BPSC_RR_myRegion_Open.listView-meta.xml
<ListView>
    <fullName>BPSC_RR_myRegion_Open</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource_Request_Name__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Staffer_Resource__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Request_Priority__c</columns>
    <columns>Role_Budget__c</columns>
    <columns>pse__Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MyRegion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Assigned,Cancelled</value>
    </filters>
    <label>BPSC - RR - Open - myRegion</label>
</ListView>