unpackaged/main/default/objects/pse__Resource_Request__c/listViews/Copy_of_Jvs_ALL_Open.listView-meta.xml
<ListView>
    <fullName>Copy_of_Jvs_ALL_Open</fullName>
    <columns>NAME</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Account__c</columns>
    <columns>FFX_Project_Name__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Region__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Draft,Ready to Staff,Hold</value>
    </filters>
    <filters>
        <field>Role_Budget_Required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Role_Budget__c</field>
        <operation>equals</operation>
    </filters>
    <label>Jvs - ALL Open Need Role Budget</label>
</ListView>