unpackaged/main/default/objects/pse__Resource_Request__c/listViews/JVS_Business_Consulting_RR.listView-meta.xml
<ListView>
    <fullName>JVS_Business_Consulting_RR</fullName>
    <columns>FFX_Project_Name__c</columns>
    <columns>NAME</columns>
    <columns>pse__Resource_Request_Name__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Request_Priority__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Draft,Ready to Staff,Hold</value>
    </filters>
    <filters>
        <field>pse__Practice__c</field>
        <operation>contains</operation>
        <value>Finance,Supply Chain,Production</value>
    </filters>
    <filters>
        <field>MyRegion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>JVS Business Consulting RR</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Services_Jeeves</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>