unpackaged/main/default/objects/pse__Resource_Request__c/listViews/Jvs_Project_request.listView-meta.xml
<ListView>
    <fullName>Jvs_Project_request</fullName>
    <columns>NAME</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Account__c</columns>
    <columns>FFX_Project_Name__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Region__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Draft,Ready to Staff</value>
    </filters>
    <filters>
        <field>pse__Region__c</field>
        <operation>equals</operation>
        <value>Jeeves</value>
    </filters>
    <filters>
        <field>pse__Project__c</field>
        <operation>greaterThan</operation>
        <value>A</value>
    </filters>
    <label>Jvs - Project request</label>
</ListView>